# moderncpp

./: .clang-format  .gitignore  README.md
.github/workflows/: false-share-benchmark.yml  formatting.yml  queue-tests.yml
false-share/: README.md  common.hpp  direct-share.cpp  false-share.cpp  no-share.cpp  secuencial.cpp  test.sh
lockfree-queue/: CMakeLists.txt  README.md
lockfree-queue/src/: SPSC.hpp  common.hpp
lockfree-queue/test/: await_policies.cpp  spsc_nowait.cpp  test_allocator.hpp
raii-logs/: LogFile.hpp  logs.txt  main  main.cpp
scripts/: README.md  apply-format.sh  check-format.sh  format-common.sh  setup-hooks.sh
